# bixverse-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
docs/: news.MD
src/: data.rs  lib.rs  prelude.rs
src/core/: core_r_wrappers.rs  mat_struct.rs  mod.rs  synthetic_data.rs
src/core/base/: cors_similarity.rs  info.rs  loess.rs  mod.rs
src/core/math/: linear_algebra.rs  matrix_helpers.rs  mod.rs  pca_svd.rs  rbf.rs  sparse.rs  stats.rs  vector_helpers.rs
src/enrichment/: enrichment_r_wrapper.rs  gsea.rs  gsva.rs  mitch.rs  mod.rs  oae.rs
src/gpu/: gpu_r_wrappers.rs  mod.rs
src/gpu/sc_gpu/: knn_gpu.rs  mod.rs
src/graph/: community_detections.rs  graph_clustering.rs  graph_label_propagations.rs  graph_structures.rs  mod.rs  page_rank.rs
src/methods/: cis_target.rs  coremo.rs  dgrdl.rs  diffcor.rs  graph_diffusions.rs  ica.rs  methods_r_wrapper.rs  mod.rs  rbh.rs  snf.rs
src/ontology/: go_elim.rs  mod.rs  ontology_r_wrappers.rs  similarity.rs
src/single_cell/: mod.rs  sc_r_wrappers.rs  sc_simd.rs  sc_traits.rs
src/single_cell/data_streaming/: h5ad_io.rs  mod.rs  mtx_io.rs  r_obj_io.rs
src/single_cell/mc_analysis/: mod.rs
src/single_cell/mc_processing/: hvg_pca.rs  mod.rs
src/single_cell/sc_analysis/: cell_aggregation_utils.rs  dge_pathway_scores.rs  fast_ranking.rs  hdwgcna_meta_cells.rs  hotspot.rs  milo_r.rs  mod.rs  module_scoring.rs  scenic.rs  seacells.rs  super_cells.rs  vision.rs
src/single_cell/sc_batch_correction/: batch_utils.rs  bbknn.rs  fast_mnn.rs  harmony.rs  mod.rs
src/single_cell/sc_data/: data_io.rs  depracated_conversion.rs  h5ad_io.rs  h5ad_multifile_io.rs  mod.rs  mtx_io.rs  plotting.rs  r_obj_io.rs  sc_synthetic_data.rs
src/utils/: heap_structures.rs  macros.rs  matrix_utils.rs  mod.rs  r_rust_interface.rs  simd.rs  traits.rs  utils_mat.rs  vec_utils.rs
tests/: large_scale_diagonstics.rs
(+15 files in other folders)
