[package]
name = "bixverse-rs"
version = "0.1.0"
edition = "2024"
authors = ["Gregor Lueg <gregorlueg@me.com>"]
license = "MIT"
repository = "https://github.com/GregorLueg/bixverse-rs"

[lib]
name = "bixverse_rs"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
bincode = "2.0.1"
extendr-api = "0.8.1"
faer = "0.23.2"
faer-entity = "0.20.1"
half = "2.7.1"
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
