[package]
name = "bixverse-rs"
version = "0.1.1"
edition = "2024"
authors = ["Gregor Lueg <gregorlueg@me.com>"]
license = "MIT"
repository = "https://github.com/GregorLueg/bixverse-rs"
description = "A Rust library with various utilities for computational biology and single cell."

[lib]
name = "bixverse_rs"
path = "src/lib.rs"

[features]
single-cell = ["half", "bincode", "indexmap", "memmap2", "hdf5", "lz4_flex"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true

[dependencies]
ann-search-rs = "0.2.3"
bincode = { version = "2.0.1", features = ["serde"], optional = true }
extendr-api = "0.8.1"
faer = "0.23.2"
faer-entity = "0.20.1"
half = { version = "2.7.1", optional = true }
hdf5 = { package = "hdf5-metno", version = "0.10.1", features = [
    "static",
    "zlib",
], optional = true }
indexmap = { version = "2.13.0", optional = true }
lz4_flex = { version = "0.12.0", optional = true }
memmap2 = { version = "0.9.9", optional = true }
num-traits = "0.2.19"
once_cell = "1.21.3"
petgraph = "0.8.3"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.18.0"
thousands = "0.2.0"
wide = "1.1.1"
